--- a/PhoneStore/Views/Account/Register.cshtml
+++ b/PhoneStore/Views/Account/Register.cshtml
@@ -1,22 +1,14 @@
 ﻿@model PhoneStore.ViewModels.RegisterModel
 
 <div class="registerForm">
-    <h2>Register</h2>
-    <form asp-controller="Account" asp-action="Register"  asp-anti-forgery="true" method="post">
-            <div>
-                <label asp-for="Email">Enter Email</label><br />
-                <input type="text" asp-for="Email" />
-            </div>
-            <div>
-                <label asp-for="Password">Enter Password</label><br />
-                <input type="password" asp-for="Password" />
-            </div>
-            <div>
-                <label asp-for="ConfirmPassword">Confirm Password</label><br />
-                <input type="password" asp-for="ConfirmPassword" />
-            </div>
-            <div>
-                <input id="inputRegisterForm" type="submit" value="Register"/>
-            </div>
+    <form asp-controller="Account" asp-action="Register" method="post">
+        <h2>Register</h2>
+        <label asp-for="Email">Enter Email</label>
+        <input type="text" asp-for="Email"/>
+        <label asp-for="Password">Enter Password</label>
+        <input type="password" asp-for="Password"/>
+        <label asp-for="ConfirmPassword">Confirm Password</label>
+        <input type="password" asp-for="ConfirmPassword"/>
+        <input id="inputRegisterForm" type="submit" value="Register"/>
     </form>
 </div>
