--- a/PhoneStore/Views/Account/Login.cshtml
+++ b/PhoneStore/Views/Account/Login.cshtml
@@ -1,8 +1,10 @@
 ﻿@model PhoneStore.ViewModels.LoginModel
-
+@{
+    ViewData["Title"] = "Login";
+}
 
 <div class="loginForm">
-    <form asp-action="Login" asp-controller="Account" method="post">
+    <form method="post" asp-action="Login" asp-controller="Account">
         <a asp-action="Register" asp-controller="Account">Register</a>
         <label asp-for="Email">Enter Email</label>
         <input type="text" asp-for="Email"/>
