--- a/PhoneStore/Views/Account/Login.cshtml
+++ b/PhoneStore/Views/Account/Login.cshtml
@@ -7,9 +7,11 @@
     <form method="post" asp-action="Login" asp-controller="Account">
         <a asp-action="Register" asp-controller="Account">Register</a>
         <label asp-for="Email">Enter Email</label>
-        <input type="text" asp-for="Email"/>
+        <input asp-for="Email"/>
         <label asp-for="Password">Enter Password</label>
-        <input type="password" asp-for="Password"/>
+        <input asp-for="Password"/>
+        <label asp-for="Remember">Remember me?</label>
+        <input asp-for="Remember"/>
         <input id="inputLoginForm" type="submit" value="Login"/>
     </form>
 </div>
