Added Blazor Component for Delete function

--- a/PhoneStore/Views/Shared/_Layout.cshtml
+++ b/PhoneStore/Views/Shared/_Layout.cshtml
@@ -36,11 +36,12 @@
             </div>
         </nav>
     </header>
-@RenderBody()
+    @RenderBody()
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2020 - PhoneStore
         </div>
     </footer>
+    <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
