--- a/PhoneStore/Views/Home/Index.cshtml
+++ b/PhoneStore/Views/Home/Index.cshtml
@@ -3,17 +3,9 @@
     ViewData["Title"] = "Home Page";
 }
 <div class ="infoDb">
-    <ul>
-        @foreach (var item in Model.Phones)
-        {
-            <li>@item.Company.Name - @item.Name - @item.Country - @item.Price$</li>
-        }
-        <form method="post" asp-action="Delete" asp-controller="Home">
-            <input type="text" name="nameToDelete"/>
-            <input type="submit" value="Delete"/>
-        </form>
-    </ul>  
+    @(await Html.RenderComponentAsync<IndexDeletePhone>(RenderMode.ServerPrerendered))
 </div>
+
 
 <div class="containerIndex">
     
@@ -47,8 +39,8 @@
             <label id="resultInfo"></label>
         </form>
     </div>
-    
 </div>
+
 
 
 
