--- a/PhoneStore/Views/_ViewImports.cshtml
+++ b/PhoneStore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PhoneStore
 @using PhoneStore.Models
 @using PhoneStore.ViewModels
+@using PhoneStore.BlazorComponents
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
