--- a/PhoneStore/Views/Shared/_Layout.cshtml
+++ b/PhoneStore/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="~/js/site.js"></script>
-    @RenderSection("Scripts", required: false)
+    @RenderSection("scripts", required: false)
 </head>
 <body>
     <header>
