--- a/PhoneStore/Views/Account/Register.cshtml
+++ b/PhoneStore/Views/Account/Register.cshtml
@@ -7,15 +7,15 @@
         <form method="post" asp-controller="Account" asp-action="Register">
             <h2>Register</h2>
             <label asp-for="Email">Enter Email</label>
-            <input asp-for="Email"/>
+            <input class="form-control" asp-for="Email"/>
             <label asp-for="Company">Enter Company</label>
-            <input asp-for="Company"/>
+            <input class="form-control" asp-for="Company"/>
             <label asp-for="Password">Enter Password</label>
-            <input asp-for="Password"/>
+            <input class="form-control" asp-for="Password"/>
             <label asp-for="ConfirmPassword">Confirm Password</label>
-            <input asp-for="ConfirmPassword"/>
-            <input id="inputRegisterForm" type="submit" value="Register"/>
+            <input class="form-control" asp-for="ConfirmPassword"/>
+            <input class="btn btn-primary" id="inputRegisterForm" type="submit" value="Register"/>
         </form>
     </div>
-    <div asp-validation-summary="All"></div>
 </div>
+<div asp-validation-summary="All"></div>
