--- a/PhoneStore/wwwroot/css/site.css
+++ b/PhoneStore/wwwroot/css/site.css
@@ -31,13 +31,16 @@
 .deleteForm{
     margin-left: 40px;
 }
+.deleteForm *{
+    margin-top: 10px;
+}
 .calc {
     margin-left: 300px;
-    margin-top: 35px;
+    margin-top: 180px;
 }
 .insertPhone{
     margin-left: 40px;
-    margin-top: 35px;
+    margin-top: 180px;
 }
 .calc * {
   display: block;
@@ -45,9 +48,26 @@
 }
 .insertPhone * {
   display: block;
-  margin-top: 10px;
+  margin-top: 5px;
 }
-
+.input-validation-error {
+    border: 1px solid #f00;
+    background-color: #fee;
+}
+.validation-summary-errors {
+    color: red;
+    margin-left: 362px;
+    margin-top: 10px;
+}
+.validation-errors {
+    color: red;
+    margin: 0;
+    padding: 0;
+}
+.invalid {
+    border: 1px solid red;
+    background-color: #fee;
+}
 #accessDenied{
     margin-left: 400px;
 }
