--- a/PhoneStore/Views/Account/Login.cshtml
+++ b/PhoneStore/Views/Account/Login.cshtml
@@ -4,17 +4,22 @@
 }
 
 <div class="loginForm">
-    <div>
-        <form method="post" asp-action="Login" asp-controller="Account">
-            <a asp-action="Register" asp-controller="Account">Register</a>
+    <form method="post" asp-action="Login" asp-controller="Account">
+        <a asp-action="Register" asp-controller="Account">Register</a>
+        <div>
             <label asp-for="Email">Enter Email</label>
-            <input class="form-control" asp-for="Email"/>
+            <input class="form-control" asp-for="Email" />
+            <span asp-validation-for="Email"></span>
+        </div>
+        <div>
             <label asp-for="Password">Enter Password</label>
-            <input class="form-control" asp-for="Password"/>
+            <input class="form-control" asp-for="Password" />
+            <span asp-validation-for="Password"></span>
+        </div>
+        <div>
             <label asp-for="Remember">Remember me?</label>
-            <input asp-for="Remember"/>
-            <input id="inputLoginForm" class="btn btn-primary" type="submit" value="Login"/>
-        </form>
-    </div>
+            <input asp-for="Remember" />
+        </div>
+        <input id="inputLoginForm" class="btn btn-primary" type="submit" value="Login" />
+    </form>
 </div>
-<div asp-validation-summary="All"></div>
