--- a/PhoneStore/Views/Home/Index.cshtml
+++ b/PhoneStore/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
     <div class="indexContainer">
-        @(await Html.RenderComponentAsync<IndexPhoneDeleteInsert>(RenderMode.Server))
+        <component type="typeof(IndexPhoneDeleteInsert)" render-mode="ServerPrerendered"/>
         <div class="calc">
             <form id="formCalcPrice">
                 <div>
