--- a/PhoneStore/Views/Home/Index.cshtml
+++ b/PhoneStore/Views/Home/Index.cshtml
@@ -18,7 +18,10 @@
             </form>
         </div>
     </div>
-
+@section Scripts
+{
+    <script src="_framework/blazor.server.js"></script>
+}
 
 
 
